# Crinkler

./: .gitignore  CMakeLists.txt  CallTransform.cpp  CallTransform.h  CmdLineInterface.cpp  CmdLineInterface.h  CmdParam.cpp  CmdParam.h  CmdParamEnum.cpp  CmdParamEnum.h  CmdParamFlags.cpp  CmdParamFlags.h  CmdParamInt.cpp  CmdParamInt.h  CmdParamMultiAssign.cpp  CmdParamMultiAssign.h  CmdParamMultiString.cpp  CmdParamMultiString.h  CmdParamString.cpp  CmdParamString.h  CmdParamSwitch.cpp  CmdParamSwitch.h  CoffLibraryLoader.cpp  CoffLibraryLoader.h  CoffObjectLoader.cpp  CoffObjectLoader.h  CompositeProgressBar.cpp  CompositeProgressBar.h  CompositeTransform.cpp  CompositeTransform.h  CompressionSummary.cpp  CompressionSummary.h  ConsoleProgressBar.cpp  ConsoleProgressBar.h  Crinkler.cpp  Crinkler.h  Crinkler.icproj  Crinkler.rc  Crinkler.sln  Crinkler.vcproj  (+56 more)
Benchmarker/: Benchmarker.cpp  Benchmarker.vcproj
CmdLineInterface/: CmdLineInterface.cpp  CmdLineInterface.h  CmdParam.cpp  CmdParam.h  CmdParamFlags.cpp  CmdParamFlags.h  CmdParamInt.cpp  CmdParamInt.h  CmdParamMultiAssign.cpp  CmdParamMultiAssign.h  CmdParamString.cpp  CmdParamString.h  CmdParamSwitch.h
Compressor/: CompressionState.cpp  CompressionState.h  CompressionStateEvaluator.h  CompressionStream.cpp  CompressionStream.h  Compressor.cpp  Compressor.h  Compressor.icproj  Compressor.vcproj  Compressor.vcxproj  Compressor.vcxproj.filters  GPUCompressionStateEvaluator.cpp  GPUCompressionStateEvaluator.h  ModelList.cpp  ModelList.h  ProgressBar.h  SoftwareCompressionStateEvaluator.cpp  SoftwareCompressionStateEvaluator.h  aritcode.asm  aritcode.h  common.h  data.asm  data.h  downscale_ps.hlsl  model.asm  model.h  shader_ps.hlsl  shader_vs.hlsl
ExportScraper/: ExportScraper.sln  ExportScraper.vcxproj  main.cpp
doc/: TODO.txt  license.txt  manual.txt
modules/: calltrans.asm  header10.asm  header10_1k.asm  header11.asm  header12.asm  header13.asm  header14.asm  header14_compatibility.asm  header20.asm  header20_1k.asm  header20_compatibility.asm  header4.asm  header_exp.asm  import10-safe.asm  import10.asm  import10_1k.asm  import12-range.asm  import12-safe.asm  import12.asm  import12_1k.asm  import14-range.asm  import14-safe-range.asm  import14-safe.asm  import15.asm  import4.asm  modules.vcxproj  modules.vcxproj.filters
releases/crinkler13/: license.txt  manual.txt
releases/crinkler20a/: license.txt  manual.txt
releases/crinkler21/: manual.txt
releases/crinkler21/win32/: crinkler.map
releases/crinkler21/win64/: crinkler.map
releases/crinkler21a/: license.txt  manual.txt
releases/crinkler23/: LICENSE.txt  manual.txt
releases/crinkler30/: LICENSE.txt  manual.txt
source/: CallTransform.cpp  CallTransform.h  CoffLibraryLoader.cpp  CoffObjectLoader.cpp  CoffObjectLoader.h  CompositeProgressBar.cpp  CompositeProgressBar.h  ConsoleProgressBar.h  Crinkler.cpp  Crinkler.h  Crinkler.vcxproj  Crinkler.vcxproj.filters  EmpiricalHunkSorter.cpp  EmpiricalHunkSorter.h  ExplicitHunkSorter.cpp  ExplicitHunkSorter.h  Export.cpp  Export.h  Fix.cpp  HeuristicHunkSorter.cpp  HtmlReport.cpp  HtmlReport.h  Hunk.cpp  Hunk.h  HunkList.cpp  HunkList.h  HunkLoader.cpp  HunkLoader.h  ImportHandler.cpp  ImportHandler.h  LTCGLoader.cpp  LTCGLoader.h  Log.cpp  Log.h  MemoryFile.cpp  MemoryFile.h  MiniDump.h  MultiLoader.cpp  MultiLoader.h  NameMangling.h  (+14 more)
source/CmdLineInterface/: CmdLineInterface manual.txt  CmdLineInterface.cpp  CmdLineInterface.h  CmdParam.cpp  CmdParam.h  CmdParamFlags.cpp  CmdParamFlags.h  CmdParamInt.cpp  CmdParamInt.h  CmdParamMultiAssign.cpp  CmdParamMultiAssign.h  CmdParamString.cpp  CmdParamString.h  CmdParamSwitch.cpp  CmdParamSwitch.h
source/Compressor/: AritCode.cpp  CMakeLists.txt  CompressionState.cpp  CompressionState.h  CompressionStateEvaluator.cpp  CompressionStateEvaluator.h  CompressionStream.cpp  CompressionStream.h  Compressor.cpp  Compressor.h  Compressor.vcxproj  Compressor.vcxproj.filters  CounterState.cpp  CounterState.h  Model.cpp  ModelList.cpp  ModelList.h  SoftwareCompressionStateEvaluator.cpp  SoftwareCompressionStateEvaluator.h  aritcode.h  log_table.asm  model.asm  model.h
source/CompressorExample/: CMakeLists.txt  CompressorExample.vcxproj  main.cpp
source/Crinkler/: CMakeLists.txt  CallTransform.cpp  CallTransform.h  CoffLibraryLoader.cpp  CoffLibraryLoader.h  CoffObjectLoader.cpp  CoffObjectLoader.h  CompositeProgressBar.cpp  ConsoleProgressBar.cpp  Crinkler.cpp  Crinkler.h  Crinkler.rc  Crinkler.vcxproj  Crinkler.vcxproj.filters  EmpiricalHunkSorter.cpp  EmpiricalHunkSorter.h  ExplicitHunkSorter.cpp  ExplicitHunkSorter.h  Export.cpp  Fix.cpp  Fix.h  HeuristicHunkSorter.cpp  HeuristicHunkSorter.h  HtmlReport.cpp  Hunk.cpp  Hunk.h  HunkList.cpp  HunkList.h  HunkLoader.cpp  HunkLoader.h  ImportHandler.cpp  ImportHandler.h  LTCGLoader.cpp  LTCGLoader.h  MemoryFile.cpp  MemoryFile.h  MiniDump.cpp  MultiLoader.cpp  MultiLoader.h  NameMangling.cpp  (+16 more)
source/Crinkler/CmdLineInterface/: CmdLineInterface.cpp  CmdParam.cpp  CmdParamFlags.h  CmdParamInt.cpp  CmdParamMultiAssign.cpp  CmdParamMultiAssign.h  CmdParamString.cpp
source/Crinkler/modules/: header20.asm  header20_1k.asm  header22_1k.asm  header30.asm  header30_compatibility.asm  import20_1k.asm  runtime.asm
source/Crinkler/modules/old/: header11.asm  header12.asm  header20.asm  import12-safe-range.asm  import14.asm
source/ExportScraper/: CMakeLists.txt  ExportScraper.vcxproj  main.cpp
source/modules/: header14_compatibility.asm  header20.asm  header20_1k.asm  header20_compatibility.asm  header22_1k.asm  import10-range.asm  import10.asm  import12-safe.asm  modules.vcxproj
test/: buildals.txt  buildamalgam.txt  buildbenitoite.txt  buildbuzzie.txt  buildfallty.txt  buildgalv.txt  buildktrix.txt  buildmich.txt  buildmicropolis.txt  buildmollusk.txt  buildnvl.txt  buildobjz.txt  buildparsec.txt  buildptnz.txt  buildrambo.txt  buildtest.txt  runtests.py  test_recompress.py  testlist.txt
test/exportlister/: main.cpp
tools/TableGenerator/: TableGenerator.vcxproj  main.cpp
web/: index.html  style.css
(+10 files in other folders)
